# Personal_Work

./: README.md
Card Security/: Gift.java  card.h
Encryption prog/: Encryption.java  RSA.java  ReadFiles.java  exemple.txt  rsa.c
Games/CodeName/: CodeName.bat  CodeName_FullScript.py  Grille_color.py  Grille_mots.py  Test.py  mots_pour_codename.txt
Games/Folt/: folt.c  folt.h
Games/Net/: CMakeLists.txt  README.md  Rapport Projet Tech - TMA34_G.tex  date.txt  divers.c  net_sdl.c  net_solve.c  net_text.c  tests.c
Games/Net/Android/: AndroidManifest.xml  build.xml
Games/Net/Android/assets/: default.txt
Games/Net/Android/jni/src/: Android.mk  Makefile  game.c  game.h  game_io.c  game_rand.c  game_rand.h  game_sdl.c  game_sdl.h  net_sdl.c  net_solve.c
Games/Net/game_files/: 3par3.txt  4par4.txt  5par5_wrap.txt  CMakeLists.txt  game_10_10_S.txt  game_20_20_S.txt  game_40_40_S.txt
Games/Net/game_test_files/: croix.txt  gtest.txt  over1.txt  over2.txt  over3.txt  solvetest.txt  test_save.txt
Games/Net/game_test_files/moodle/: default.sol  default.txt  game34.sol  game34.txt  hilbert4.sol  hilbert4.txt
Games/Net/src/: CMakeLists.txt  game.c  game_sdl.c  game_sdl.h
Games/Net/src/assets/: CMakeLists.txt
Projects&Internship/Internship_Graph_L1/: algo_git.py  graphes.py
Projects&Internship/Projet_Archi_L2/: memory.ys
Projet Archi/: library.ys  test.ys
Projet Technologique/helloWorld/: compile.bat
Projet Technologique/tsp/: compile.bat
Projet_Techno/: Hi.txt  coucou.txt  test  test.c  tests.c  tests_projets.c
Projet_Techno/V1/: .nfs000000000151a5a900000031  .nfs0000000001ed6e3b0000003e  Makefile  depend.txt  net_text  net_text.c
Projet_Techno/helloWorld/: Makefile  bar.c
Random&Tests/Card Security/: card.c
Random&Tests/Encryption prog/: Sample.java  (+2 more)
(+51 files in other folders)
